decrease hologram effect thickness (better readability and fixes weird appearance in gamesentry)

--- a/src/variables.scss
+++ b/src/variables.scss
@@ -18,7 +18,7 @@ $box-shadow: rgba(202, 121, 255, 0.3) 0px 5px 5px 0px, #7e1bff9c 2px 2px 2px 2px
     $main-color-see-through-faint 75%,
     $main-color-see-through-faint 100%
   );
-  background-size: 10px 10px;
+  background-size: 5px 5px;
 }
 
 .hologram-plain {
@@ -32,7 +32,7 @@ $box-shadow: rgba(202, 121, 255, 0.3) 0px 5px 5px 0px, #7e1bff9c 2px 2px 2px 2px
     $main-color-see-through-faint 75%,
     $main-color-see-through-faint 100%
   );
-  background-size: 10px 10px;
+  background-size: 5px 5px;
 }
 
 @font-face {
